# sl-vista-middlelayer

./: app.env  pyproject.toml
app/: cache_manager.py  main.py  settings.py
app/routers/intent_detection/: intent_detection.py  schemas.py
app/routers/search/: search.py
app/routers/websockets/: schemas.py  websockets.py
