[tool.poetry]
name = "sl-vista-middlelayer"
version = "0.1.0"
description = ""
authors = ["Mtaylert <Mtaylert@drift.com>"]
readme = "README.md"
packages = [{include = "sl_vista_middlelayer"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
uvicorn = "^0.30.3"
pinecone = "^4.0.0"
socketio = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
